--- a/attendance-booking/attendance-booking.page.html
+++ b/attendance-booking/attendance-booking.page.html
@@ -1,8 +1,14 @@
 <ion-header>
-	<app-list-toolbar [pageTitle]="numberOfDinnerPax + 'P - '+ numberOfReal+'Đ - '+numberOfKid+'T - '+numberOfForeigner+'N'" [pageConfig]="pageConfig" [ShowFeature]="false" [ShowArchive]="false" [ShowHelp]="false" [selectedItems]="selectedItems" [query]="query" (add)="add()" (refresh)="refresh()" (export)="export()" (import)="import($event)" (help)="help()" (unselect)="unselect()" (archiveItems)="archiveItems()" (deleteItems)="deleteItems()" (changeBranch)="changeBranch($event)"></app-list-toolbar>
+	<app-list-toolbar pageTitle="{{'erp.app.pages.crm.attendance-booking.page-title' | translate}}" [pageConfig]="pageConfig" [ShowFeature]="false" [ShowArchive]="false" [ShowHelp]="false" [selectedItems]="selectedItems" [query]="query" (add)="add()" (refresh)="refresh()" (export)="export()" (import)="import($event)" (help)="help()" (unselect)="unselect()" (archiveItems)="archiveItems()" (deleteItems)="deleteItems()" (changeBranch)="changeBranch($event)">
+		<span title>{{numberOfDinnerPax + 'P - '+ numberOfReal+'Đ - '+numberOfKid+'T - '+numberOfForeigner+'N'}}</span>
+	</app-list-toolbar>
 </ion-header>
 
 <ion-content appScrollbarTheme class="scrollx">
+	<ion-refresher [disabled]="!pageConfig.refresher" [disabled]="!pageConfig.refresher" slot="fixed" (ionRefresh)="refresh($event)">
+		<ion-refresher-content></ion-refresher-content>
+	</ion-refresher>
+	
 	<section class="table responsive">
 		<header class="bold">
 			<div class="col-checkbox cell"></div>
