--- a/outlet/outlet.page.html
+++ b/outlet/outlet.page.html
@@ -2,7 +2,7 @@
 	<app-list-toolbar pageTitle="{{'erp.app.pages.crm.business-partner.page-title' | translate}}" [ShowFeature]="false" [pageConfig]="pageConfig" [selectedItems]="selectedItems" [query]="query" (add)="add()" (refresh)="refresh()" (export)="export()" (import)="import($event)" (help)="help()" (unselect)="unselect()" (archiveItems)="archiveItems()" (deleteItems)="deleteItems()" (changeBranch)="changeBranch($event)" (submitBusinessPartner)="submitBusinessPartner()" (approveBusinessPartner)="approveBusinessPartner()" (disapproveBusinessPartner)="disapproveBusinessPartner()"></app-list-toolbar>
 </ion-header>
 
-<ion-content appScrollbarTheme class="scrollx">
+<ion-content appScrollbarTheme class="scrollx" scroll-x="true">
 	<ion-refresher [disabled]="!pageConfig.refresher" [disabled]="!pageConfig.refresher" slot="fixed" (ionRefresh)="refresh($event)">
 		<ion-refresher-content></ion-refresher-content>
 	</ion-refresher>
