--- a/business-partner/business-partner.page.html
+++ b/business-partner/business-partner.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-	<app-list-toolbar pageTitle="{{'erp.app.pages.crm.business-partner.page-title' | translate}}" [ShowFeature]="false" [pageConfig]="pageConfig" [selectedItems]="selectedItems" [query]="query" (add)="add()" (refresh)="refresh()" (export)="export()" (import)="import($event)" (help)="help()" (unselect)="unselect()" (archiveItems)="archiveItems()" (deleteItems)="deleteItems()" (changeBranch)="changeBranch($event)" (submitBusinessPartner)="submitBusinessPartner()" (approveBusinessPartner)="approveBusinessPartner()" (disapproveBusinessPartner)="disapproveBusinessPartner()"></app-list-toolbar>
+	<app-list-toolbar pageTitle="{{'erp.app.pages.crm.business-partner.page-title' | translate}}" [ShowFeature]="true" [pageConfig]="pageConfig" [selectedItems]="selectedItems" [query]="query" (add)="add()" (refresh)="refresh()" (export)="export()" (import)="import($event)" (help)="help()" (unselect)="unselect()" (archiveItems)="archiveItems()" (deleteItems)="deleteItems()" (changeBranch)="changeBranch($event)" (submitBusinessPartner)="submitBusinessPartner()" (approveBusinessPartner)="approveBusinessPartner()" (disapproveBusinessPartner)="disapproveBusinessPartner()"  (mergeOrders)="showMergePopup($event)" ></app-list-toolbar>
 
 	<section class="table">
 		<header class="bold ion-hide-sm-down">
@@ -120,7 +120,49 @@
 
 <ion-content appScrollbarTheme class="header-table">
 	<app-page-message [itemsLength]="items.length" [showSpinner]="pageConfig.showSpinner"></app-page-message>
+	<ion-fab *ngIf="pageConfig.isShowFeature" class="feature" vertical="top" horizontal="end" slot="fixed">
+		<div class="ion-padding">
+			<ion-header>
+				<ion-toolbar>
+				  <ion-title>File Duplicate</ion-title>
+				</ion-toolbar>
+			  </ion-header>
+			<ion-radio-group  (ionChange)="handleChange($event)">
+				<ion-item >
+					<ion-radio slot="start" aria-label="Danger" [value]="'WorkPhone'" color="primary" class="radio-icon" mode="md"></ion-radio>
+					<ion-label style="white-space: normal;">WorkPhone</ion-label>
+				</ion-item>
+				<ion-item >
+					<ion-radio slot="start" aria-label="Danger" [value]="'TaxCode'"  color="primary" class="radio-icon"  mode="md"></ion-radio>
+					<ion-label style="white-space: normal;">TaxCode</ion-label>
+				</ion-item>
+			</ion-radio-group>
+			<ion-button (click)="findBy()">Filter</ion-button>
 
+			<ng-container >
+				<ion-grid>
+					<ion-row *ngIf="filesDuplicate.length">
+						<ion-col *ngIf="findByValue=='TaxCode'">TaxCode</ion-col>
+						<ion-col *ngIf="findByValue=='WorkPhone'">WorkPhone</ion-col>
+						<ion-col >Count</ion-col>
+					</ion-row>
+					<ion-row *ngFor="let i of filesDuplicate">
+						<ion-col *ngIf="findByValue=='TaxCode'" clickable (click)="query.TaxCode=i.Value;refresh()">{{i.Value}}</ion-col>
+						<ion-col *ngIf="findByValue=='WorkPhone'"clickable (click)="query.WorkPhone=i.Value;refresh()">{{i.Value}}</ion-col>
+						<ion-col >{{i.Count}}</ion-col>
+					</ion-row>
+				</ion-grid>
+			</ng-container>
+			<!-- <ion-list>
+				<ion-item>
+					<ion-radio slot="start" aria-label="Danger" color="danger" class="radio-icon" [value]="t" mode="md"></ion-radio>
+				</ion-item>
+				<ion-item>
+					<ion-radio slot="start" aria-label="Success" color="success" class="radio-icon" [value]="t" mode="md"></ion-radio>
+				</ion-item>
+			</ion-list> -->
+		</div>
+	</ion-fab>
 	<div *ngIf="items.length && pageConfig.showSpinner==false">
 		<section class="table">
 
@@ -171,7 +213,194 @@
 			</div>
 		</section>
 	</div>
-
+	<ion-modal #modal [isOpen]="isShowMergePopup" (willDismiss)="isShowMergePopup = false; ">
+		<ng-template>
+			<ion-content>
+				<ion-grid merge-modal>
+					<ion-row>
+					<ion-col size="2">
+						<ion-row class="merge-row avatar">
+							
+						</ion-row>
+						<ion-row class="merge-row">
+							Code
+						</ion-row>
+						<ion-row class="merge-row">
+							Name
+						</ion-row>
+						<ion-row class="merge-row name">
+							WorkPhone
+						</ion-row>
+						<ion-row class="merge-row">
+							TaxCode
+						</ion-row>
+						<ion-row class="merge-row">
+							BillingAddress
+						</ion-row>
+						<ion-row class="merge-row">
+							CompanyName
+						</ion-row>
+						<ion-row class="merge-row">
+							Email
+						</ion-row>
+						<ion-row class="merge-row">
+							IsPersonal
+						</ion-row>
+						<ion-row class="merge-row">
+							AddressLine 1
+						</ion-row>
+						<ion-row class="merge-row">
+							AddressLine 2
+						</ion-row>
+						<ion-row class="merge-row">
+							Contact
+						</ion-row>
+						<ion-row class="merge-row">
+							Country
+						</ion-row>
+						<ion-row class="merge-row">
+							Phone 1
+						</ion-row>
+						<ion-row class="merge-row">
+							Phone 2
+						</ion-row>
+						<ion-row class="merge-row">
+							Ward
+						</ion-row>
+						<ion-row class="merge-row">
+							Province
+						</ion-row>
+					</ion-col>
+					<ion-col size="10" style="overflow:scroll">
+						<ion-row class="merge-row">
+							<ion-radio-group style="display:flex" >
+							  <ion-item  *ngFor="let select of selectedItems">
+								<ion-avatar (click)="changeSelected(select)" [ngStyle]="{'border': select.Id == mergeModel.Id ? '2px solid blue' : ''}">
+									<img  src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+								  </ion-avatar>
+							  </ion-item>
+							</ion-radio-group>
+						</ion-row>
+						<ion-row class="merge-row">
+							<ion-radio-group [(ngModel)]="mergeModel.Code">
+							  <ion-item lines="none"  *ngFor="let select of selectedItems">
+								<ion-radio  *ngIf="select.Code" [value]="select.Code" >{{select.Code}}</ion-radio>
+							  </ion-item>
+							</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.Name">
+									<ion-item lines="none"  *ngFor="let select of selectedItems">
+									<ion-radio   *ngIf="select.Name" [value]="select.Name" >{{select.Name}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group  [(ngModel)]="mergeModel.WorkPhone">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio  *ngIf="select.WorkPhone"  [value]="select.WorkPhone" >{{select.WorkPhone}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row  class="merge-row">
+								<ion-radio-group  [(ngModel)]="mergeModel.TaxCode">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+											<ion-radio *ngIf="select.TaxCode" [value]="select.TaxCode" >{{select.TaxCode}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.BillingAddress">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.BillingAddress"  [value]="select.BillingAddress" >{{select.BillingAddress}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.CompanyName">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.CompanyName"  [value]="select.CompanyName" >{{select.CompanyName}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.Email">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.Email"  [value]="select.Email" >{{select.Email}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.IsPersonal">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio [value]="select.IsPersonal" >{{select.IsPersonal? 'Cá nhân':'Tổ chức'}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.Address.AddressLine1">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.Addresses.length && select.Addresses[0].AddressLine1"  [value]="select.Addresses[0].AddressLine1" >{{select.Addresses[0].AddressLine1}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.Address.AddressLine2">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.Addresses.length && select.Addresses[0].AddressLine2"  [value]="select.Addresses[0].AddressLine2" >{{select.Addresses[0].AddressLine2}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.Address.Contact">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.Addresses.length && select.Addresses[0].Contact"  [value]="select.Addresses[0].Contact" >{{select.Addresses[0].Contact}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.Address.Country">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.Addresses.length && select.Addresses[0].Country"  [value]="select.Addresses[0].Country" >{{select.Addresses[0].Country}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.Address.Phone1">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.Addresses.length && select.Addresses[0].Phone1"  [value]="select.Addresses[0].Phone1" >{{select.Addresses[0].Phone1}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.Address.Phone2">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.Addresses.length && select.Addresses[0].Phone2"  [value]="select.Addresses[0].Phone2" >{{select.Addresses[0].Province}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.Address.Ward">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.Addresses.length && select.Addresses[0].Ward"  [value]="select.Addresses[0].Ward" >{{select.Addresses[0].Ward}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+							<ion-row class="merge-row">
+								<ion-radio-group [(ngModel)]="mergeModel.Address.Province">
+									<ion-item lines="none" *ngFor="let select of selectedItems">
+										<ion-radio *ngIf="select.Addresses.length && select.Addresses[0].Province"  [value]="select.Addresses[0].Province" >{{select.Addresses[0].Ward}}</ion-radio>
+									</ion-item>
+								</ion-radio-group>
+							</ion-row>
+					</ion-col>
+				
+					</ion-row>
+				</ion-grid>
+				<ion-button color="primary" (click)="mergeContact()">Merge</ion-button>
+			</ion-content>
+		</ng-template>
+	</ion-modal>
 	<ion-infinite-scroll color="primary" threshold="20%" (ionInfinite)="loadData($event)" [disabled]="!pageConfig.infiniteScroll || pageConfig.isEndOfData">
 		<ion-infinite-scroll-content loadingSpinner="dots"></ion-infinite-scroll-content>
 	</ion-infinite-scroll>
