Add sample translate

--- a/business-partner/business-partner.page.html
+++ b/business-partner/business-partner.page.html
@@ -415,7 +415,7 @@
 			</ion-content>
 			<ion-footer>
 				<div class="ion-padding">
-					<ion-button color="primary" (click)="mergeContact()" expand="block">Merge</ion-button>
+					<ion-button color="primary" (click)="mergeContact()" expand="block">{{'Merge' | translate}}</ion-button>
 				</div>
 			</ion-footer>
 		</ng-template>
